--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-pagina do emanuel
+drift
+"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao drifting japonês.
+Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."
+
+Veja mais sobre "Drifting" em: https://brasilescola.uol.com.br/curiosidades/drifting.htm
+
+"É uma arte de direção de carros que se fundamenta em deslizar nas curvas escapando a traseira do carro, girando o volante de forma que as rodas dianteiras fiquem sempre em direção oposta a curva, utilizando o freio de mão para controlar o nível de derrapagem, fazendo o carro andar de lado.
+
+O drifting moderno começou há 30 anos no “All Japan Touring Car Championship races”. Tendo como criador da técnica o piloto japonês, Kunimitsu Takahashi, em 1970, que ficou famoso batendo seu “apex” (ponto onde o carro está mais próximo da curva) em alta velocidade, deslizando na curva e saindo dela com mais velocidade que o normal."
+
+Veja mais sobre "Drifting" em: https://brasilescola.uol.com.br/curiosidades/drifting.htm"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao drifting japonês.
+Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."
+
+Veja mais sobre "Drifting" em: https://brasilescola.uol.com.br/curiosidades/drifting.htm
