--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <body>
             <h1>DRIFT</h1>
 
-            <p>"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao drifting japonês.</p>
+            <p>"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao <strong>x drifting japonês</strong>.</p>
             <p>Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."</p>
 
-            <p>Veja mais sobre "Drifting" em: https://brasilescola.uol.com.br/curiosidades/drifting.htm</p>
+            <p>Veja mais sobre  <i>"Drifting"</i> em: https://brasilescola.uol.com.br/curiosidades/drifting.htm</p>
 
             <p>"É uma arte de direção de carros que se fundamenta em deslizar nas curvas escapando a traseira do carro, girando o volante de forma que as rodas dianteiras fiquem sempre em direção oposta a curva, utilizando o freio de mão para controlar o nível de derrapagem, fazendo o carro andar de lado.</p>
 
