--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <p>Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."</p>
 
             <p>Veja mais sobre "Drifting" em: https://brasilescola.uol.com.br/curiosidades/drifting.htm</p>
+            <ol>
+                <li>Endereço: sagrada familia, N° 989</li>
+                <li>bairro: centro sul</li>
+                <li>Cidade: Dois Vizinhos</li>
+                <li>Email: dekrjjbhi@gmail.com</li>
+                <li>Fone: (46)999886169</li>
+            </ol>
         </body>
     </html>
 <!DOCTYPE html>
