--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body>
             <h1>DRIFT</h1>
 
-            <p>"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao <strong>x drifting japonês</strong>.</p>
+            <p style="font-size: 30px ;" >"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao <strong>x drifting japonês</strong>.</p>
             <p>Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."</p>
 
             <p>Veja mais sobre  <i>"Drifting"</i> em: https://brasilescola.uol.com.br/curiosidades/drifting.htm</p>
