--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </head>
         
         <body>
-            <h1>DRIFT</h1>
+            <h1 style="text-align: center">DRIFT</h1>
 
             <p style="font-size: 50px" >"Após essa grande façanha ele ganhou inúmeros fãs que deram início ao <strong>x drifting japonês</strong>.</p>
             <p>Muito tempo depois da sua criação o drifting chegou ao Brasil, só começou a ganhar destaque com a popularização do tuning e a chegada de jogos e filmes relacionados. O drift se tornou uma paixão para os brasileiros que curtem aventura e alta velocidade, tanto que está previsto para o primeiro semestre de 2007 o I Campeonato Brasileiro de Drifting."</p>
